Fix : Example code fix

--- a/ObjectDetection/Hailo/Hailo.ipynb
+++ b/ObjectDetection/Hailo/Hailo.ipynb
@@ -48,27 +48,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "YTrxXdeW5UYA"
-      },
-      "outputs": [],
-      "source": [
-        "# # Test(predict)\n",
-        "# import os\n",
-        "# model = YOLO(\"best.pt\")\n",
-        "# # testImgDir = (f\"{dataset.location}/test/images\") # \"./ONE-Q-1/test/images\"\n",
-        "\n",
-        "# # print(testImgDir)\n",
-        "# # for img in os.listdir(testImgDir):\n",
-        "# #   imgName = f\"{testImgDir}/{img}\"\n",
-        "# #   results = model.predict(source=imgName, save=True)\n",
-        "# #   print(results[0].boxes.xyxy, results[0].boxes.xyxyn)\n",
-        "# #   break"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "lCyuEkRW60sL"
@@ -106,10 +85,12 @@
         "# print(\"ONNX model is valid!\")\n",
         "\n",
         "# # Test the ONNX model with ONNX Runtime\n",
-        "# # dummy_input = torch.randn(16, 3, 640, 640).numpy()\n",
-        "# # ort_session = ort.InferenceSession(\"best.onnx\")\n",
-        "# # outputs = ort_session.run(None, )\n",
-        "# # print(outputs[0])"
+        "# dummy_input = torch.randn(1, 3, 640, 640).numpy()\n",
+        "# ort_session = ort.InferenceSession(\"best.onnx\")\n",
+        "\n",
+        "# # Error 발생 시 문자열 이름이 달라서이고, 일단 진행\n",
+        "# outputs = ort_session.run(None, {\"images\": dummy_input})\n",
+        "# print(outputs[0])"
       ]
     },
     {
@@ -158,10 +139,98 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NB3s7lNmLGOO"
+      },
+      "source": [
+        "# Step1. Parsing ONNX file"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sFUxTcPwSdIu"
+      },
+      "source": [
+        "## Parsing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cFgLCkBqLQa6"
+      },
+      "outputs": [],
+      "source": [
+        "!my_env/bin/python translate_model.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NbJeCWMkLVHr"
+      },
+      "source": [
+        "### translate_model.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MeWf9MWBJ9ed"
+      },
+      "outputs": [],
+      "source": [
+        "# from hailo_sdk_client import ClientRunner\n",
+        "\n",
+        "# # Define the ONNX model path and configuration\n",
+        "# onnx_path = \"best.onnx\"\n",
+        "# onnx_model_name = \"yolov8n\"\n",
+        "# chosen_hw_arch = \"hailo8\"  # Specify the target hardware architecture\n",
+        "\n",
+        "# # Initialize the ClientRunner\n",
+        "# runner = ClientRunner(hw_arch=chosen_hw_arch)\n",
+        "\n",
+        "# # Use the recommended end node names for translation\n",
+        "# end_node_names = [\n",
+        "#     \"/model.22/cv2.0/cv2.0.2/Conv\",  # P4 regression_layer\n",
+        "#     \"/model.22/cv3.0/cv3.0.2/Conv\",  # P4 cls_layer\n",
+        "#     \"/model.22/cv2.1/cv2.1.2/Conv\",  # P5 regression_layer\n",
+        "#     \"/model.22/cv3.1/cv3.1.2/Conv\",  # P5 cls_layer,\n",
+        "#     \"/model.22/cv2.2/cv2.2.2/Conv\",  # P6 regression_layer\n",
+        "#     \"/model.22/cv3.2/cv3.2.2/Conv\",  # P6 cls_layer,\n",
+        "# ]\n",
+        "\n",
+        "# try:\n",
+        "#     # Translate the ONNX model to Hailo's format\n",
+        "#     hn, npz = runner.translate_onnx_model(\n",
+        "#         onnx_path,\n",
+        "#         onnx_model_name,\n",
+        "#         end_node_names=end_node_names,\n",
+        "#         net_input_shapes={\"images\": [1, 3, 640, 640]},  # Adjust input shapes if needed\n",
+        "#     )\n",
+        "#     print(\"Model translation successful.\")\n",
+        "# except Exception as e:\n",
+        "#     print(f\"Error during model translation: {e}\")\n",
+        "#     raise\n",
+        "\n",
+        "# # Save the Hailo model HAR file\n",
+        "# hailo_model_har_name = f\"{onnx_model_name}_hailo_model.har\"\n",
+        "# try:\n",
+        "#     runner.save_har(hailo_model_har_name)\n",
+        "#     print(f\"HAR file saved as: {hailo_model_har_name}\")\n",
+        "# except Exception as e:\n",
+        "#     print(f\"Error saving HAR file: {e}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "J3721rku3RkD"
       },
       "source": [
-        "# Step0. GPU setup (전부)"
+        "# Step2. GPU setup (전부)"
       ]
     },
     {
@@ -188,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "PIODgkYu-YqB"
       },
@@ -221,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "SllDx22j-YRN"
       },
@@ -245,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "z0I_1Qz4-ruD"
       },
@@ -346,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "hv38UGxA30Y_"
       },
@@ -383,98 +452,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NB3s7lNmLGOO"
-      },
-      "source": [
-        "# Step1. Parsing ONNX file"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sFUxTcPwSdIu"
-      },
-      "source": [
-        "## Parsing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cFgLCkBqLQa6"
-      },
-      "outputs": [],
-      "source": [
-        "!my_env/bin/python translate_model.py"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NbJeCWMkLVHr"
-      },
-      "source": [
-        "### Script file"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MeWf9MWBJ9ed"
-      },
-      "outputs": [],
-      "source": [
-        "# from hailo_sdk_client import ClientRunner\n",
-        "\n",
-        "# # Define the ONNX model path and configuration\n",
-        "# onnx_path = \"best.onnx\"\n",
-        "# onnx_model_name = \"yolov8n\"\n",
-        "# chosen_hw_arch = \"hailo8\"  # Specify the target hardware architecture\n",
-        "\n",
-        "# # Initialize the ClientRunner\n",
-        "# runner = ClientRunner(hw_arch=chosen_hw_arch)\n",
-        "\n",
-        "# # Use the recommended end node names for translation\n",
-        "# end_node_names = [\n",
-        "#     \"/model.22/cv2.0/cv2.0.2/Conv\",  # P4 regression_layer\n",
-        "#     \"/model.22/cv3.0/cv3.0.2/Conv\",  # P4 cls_layer\n",
-        "#     \"/model.22/cv2.1/cv2.1.2/Conv\",  # P5 regression_layer\n",
-        "#     \"/model.22/cv3.1/cv3.1.2/Conv\",  # P5 cls_layer,\n",
-        "#     \"/model.22/cv2.2/cv2.2.2/Conv\",  # P6 regression_layer\n",
-        "#     \"/model.22/cv3.2/cv3.2.2/Conv\",  # P6 cls_layer,\n",
-        "# ]\n",
-        "\n",
-        "# try:\n",
-        "#     # Translate the ONNX model to Hailo's format\n",
-        "#     hn, npz = runner.translate_onnx_model(\n",
-        "#         onnx_path,\n",
-        "#         onnx_model_name,\n",
-        "#         end_node_names=end_node_names,\n",
-        "#         net_input_shapes={\"images\": [1, 3, 640, 640]},  # Adjust input shapes if needed\n",
-        "#     )\n",
-        "#     print(\"Model translation successful.\")\n",
-        "# except Exception as e:\n",
-        "#     print(f\"Error during model translation: {e}\")\n",
-        "#     raise\n",
-        "\n",
-        "# # Save the Hailo model HAR file\n",
-        "# hailo_model_har_name = f\"{onnx_model_name}_hailo_model.har\"\n",
-        "# try:\n",
-        "#     runner.save_har(hailo_model_har_name)\n",
-        "#     print(f\"HAR file saved as: {hailo_model_har_name}\")\n",
-        "# except Exception as e:\n",
-        "#     print(f\"Error saving HAR file: {e}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HUub5BzQShj1"
       },
       "source": [
-        "# Step2. Optimizing model"
+        "# Step3. Optimizing model"
       ]
     },
     {
@@ -503,7 +484,7 @@
         "id": "Ht5lOhVkTl8S"
       },
       "source": [
-        "### Script file"
+        "### print_net_info.py"
       ]
     },
     {
@@ -514,7 +495,7 @@
       },
       "outputs": [],
       "source": [
-        "# print_net_info.py\n",
+        "# # print_net_info.py\n",
         "# from hailo_sdk_client import ClientRunner\n",
         "\n",
         "# # Load the HAR file\n",
@@ -545,7 +526,7 @@
         "id": "IRHZdif_YBtU"
       },
       "source": [
-        "## Jsonize (위 2개)"
+        "## Jsonize"
       ]
     },
     {
@@ -556,18 +537,8 @@
       },
       "outputs": [],
       "source": [
-        "#!pip install ultralytics --quiet\n",
-        "!pip install roboflow --quiet"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "s21e1CO5bRqc"
-      },
-      "outputs": [],
-      "source": [
+        "!pip install roboflow --quiet\n",
+        "\n",
         "from roboflow import Roboflow\n",
         "\n",
         "rf = Roboflow(api_key=\"wNo4QrXGVHMuGz8nVoBq\")\n",
@@ -577,12 +548,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!python jsonize.py"
+      ],
+      "metadata": {
+        "id": "cEIySYeniL6k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IAVMQsKCYGRh"
       },
       "source": [
-        "### Script file"
+        "### jsonize.py"
       ]
     },
     {
@@ -593,57 +575,57 @@
       },
       "outputs": [],
       "source": [
-        "import json\n",
-        "import os\n",
-        "from google.colab import drive\n",
+        "# import json\n",
+        "# import os\n",
+        "# from google.colab import drive\n",
         "\n",
-        "# Mount Google Drive\n",
-        "drive.mount('/content/drive/', force_remount=True)\n",
+        "# # Mount Google Drive\n",
+        "# drive.mount('/content/drive/', force_remount=True)\n",
         "\n",
-        "# Updated NMS layer configuration dictionary\n",
-        "nms_layer_config = {\n",
-        "\t\"nms_scores_th\": 0.2,\n",
-        "\t\"nms_iou_th\": 0.7,\n",
-        "\t\"image_dims\": [\n",
-        "\t\t640,\n",
-        "\t\t640\n",
-        "\t],\n",
-        "\t\"max_proposals_per_class\": 2,\n",
-        "\t\"classes\": 2,\n",
-        "\t\"regression_length\": 16,\n",
-        "\t\"background_removal\": False,\n",
-        "\t\"bbox_decoders\": [\n",
-        "\t\t{\n",
-        "\t\t\t\"name\": \"yolov8n/bbox_decoder41\",\n",
-        "\t\t\t\"stride\": 8,\n",
-        "\t\t\t\"reg_layer\": \"yolov8n/conv41\",\n",
-        "\t\t\t\"cls_layer\": \"yolov8n/conv42\"\n",
-        "\t\t},\n",
-        "\t\t{\n",
-        "\t\t\t\"name\": \"yolov8n/bbox_decoder52\",\n",
-        "\t\t\t\"stride\": 16,\n",
-        "\t\t\t\"reg_layer\": \"yolov8n/conv52\",\n",
-        "\t\t\t\"cls_layer\": \"yolov8n/conv53\"\n",
-        "\t\t},\n",
-        "\t\t{\n",
-        "\t\t\t\"name\": \"yolov8n/bbox_decoder62\",\n",
-        "\t\t\t\"stride\": 32,\n",
-        "\t\t\t\"reg_layer\": \"yolov8n/conv62\",\n",
-        "\t\t\t\"cls_layer\": \"yolov8n/conv63\"\n",
-        "\t\t}\n",
-        "\t]\n",
-        "}\n",
+        "# # Updated NMS layer configuration dictionary\n",
+        "# nms_layer_config = {\n",
+        "# \t\"nms_scores_th\": 0.2,\n",
+        "# \t\"nms_iou_th\": 0.7,\n",
+        "# \t\"image_dims\": [\n",
+        "# \t\t640,\n",
+        "# \t\t640\n",
+        "# \t],\n",
+        "# \t\"max_proposals_per_class\": 2,\n",
+        "# \t\"classes\": 2,\n",
+        "# \t\"regression_length\": 16,\n",
+        "# \t\"background_removal\": False,\n",
+        "# \t\"bbox_decoders\": [\n",
+        "# \t\t{\n",
+        "# \t\t\t\"name\": \"yolov8n/bbox_decoder41\",\n",
+        "# \t\t\t\"stride\": 8,\n",
+        "# \t\t\t\"reg_layer\": \"yolov8n/conv41\",\n",
+        "# \t\t\t\"cls_layer\": \"yolov8n/conv42\"\n",
+        "# \t\t},\n",
+        "# \t\t{\n",
+        "# \t\t\t\"name\": \"yolov8n/bbox_decoder52\",\n",
+        "# \t\t\t\"stride\": 16,\n",
+        "# \t\t\t\"reg_layer\": \"yolov8n/conv52\",\n",
+        "# \t\t\t\"cls_layer\": \"yolov8n/conv53\"\n",
+        "# \t\t},\n",
+        "# \t\t{\n",
+        "# \t\t\t\"name\": \"yolov8n/bbox_decoder62\",\n",
+        "# \t\t\t\"stride\": 32,\n",
+        "# \t\t\t\"reg_layer\": \"yolov8n/conv62\",\n",
+        "# \t\t\t\"cls_layer\": \"yolov8n/conv63\"\n",
+        "# \t\t}\n",
+        "# \t]\n",
+        "# }\n",
         "\n",
-        "# Path to save the updated JSON configuration\n",
-        "output_dir = \"/save/path/\"\n",
-        "os.makedirs(output_dir, exist_ok=True)  # Create the directory if it doesn't exist\n",
-        "output_path = os.path.join(output_dir, \"nms_layer_config.json\")\n",
+        "# # Path to save the updated JSON configuration\n",
+        "# output_dir = \"/save/path/\"\n",
+        "# os.makedirs(output_dir, exist_ok=True)  # Create the directory if it doesn't exist\n",
+        "# output_path = os.path.join(output_dir, \"nms_layer_config.json\")\n",
         "\n",
-        "# Save the updated configuration as a JSON file\n",
-        "with open(output_path, \"w\") as json_file:\n",
-        "    json.dump(nms_layer_config, json_file, indent=4)\n",
+        "# # Save the updated configuration as a JSON file\n",
+        "# with open(output_path, \"w\") as json_file:\n",
+        "#     json.dump(nms_layer_config, json_file, indent=4)\n",
         "\n",
-        "print(f\"NMS layer configuration saved to {output_path}\")"
+        "# print(f\"NMS layer configuration saved to {output_path}\")"
       ]
     },
     {
@@ -654,6 +636,17 @@
       "source": [
         "## Optimization"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !python calib_data.py"
+      ],
+      "metadata": {
+        "id": "FXpCl-8zhXk4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -686,7 +679,7 @@
         "id": "jh4dv5tFudOB"
       },
       "source": [
-        "### Script file"
+        "### calib_data.py"
       ]
     },
     {
@@ -697,7 +690,7 @@
       },
       "outputs": [],
       "source": [
-        "### BELOW CODE CANNOT RUN ON COLAB(RAM SHUTDOWN) -> Run in HAILO HW ###\n",
+        "# ### BELOW CODE CANNOT RUN ON COLAB(RAM SHUTDOWN) -> Run in HAILO HW ###\n",
         "# import numpy as np\n",
         "# from PIL import Image\n",
         "# import os\n",
@@ -742,6 +735,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### optimize_model.py"
+      ],
+      "metadata": {
+        "id": "0H628_qlgwpN"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -769,8 +771,9 @@
         "# change_output_activation(conv42, sigmoid)\n",
         "# change_output_activation(conv53, sigmoid)\n",
         "# change_output_activation(conv63, sigmoid)\n",
-        "# nms_postprocess(\"/content/nms_layer_config.json\", meta_arch=yolov8n, engine=cpu)\n",
-        "# performance_param(compiler_optimization_level=max)\n",
+        "# nms_postprocess(\"/content/nms_layer_config.json\", meta_arch=yolov8, engine=cpu)\n",
+        "# allocator_param(width_splitter_defuse=disabled)\n",
+        "# performance_param(compiler_optimization_level=1)\n",
         "# \"\"\"\n",
         "\n",
         "# # Load the model script into the ClientRunner\n",
@@ -779,7 +782,7 @@
         "# # Define a calibration dataset\n",
         "# # Replace 'calib_dataset' with the actual dataset you're using for calibration\n",
         "# # For example, if it's a directory of images, prepare the dataset accordingly\n",
-        "# calib_dataset = \"/content/processed_calibration_data.npy\"\n",
+        "# calib_dataset = \"/content/drive/MyDrive/processed_calibration_data.npy\"\n",
         "\n",
         "# # Perform optimization with the calibration dataset\n",
         "# runner.optimize(calib_dataset)\n",
@@ -797,7 +800,7 @@
         "id": "_pYmjs5JdilJ"
       },
       "source": [
-        "# Step3. Compile model"
+        "# Step4. Compile model"
       ]
     },
     {
@@ -827,7 +830,7 @@
         "id": "HodBej23zrkQ"
       },
       "source": [
-        "### Script file"
+        "### compile_model.py"
       ]
     },
     {
@@ -855,10 +858,19 @@
         "# except Exception as e:\n",
         "#     print(f\"[error] Failed to compile the model: {e}\")\n",
         "#     raise\n",
-        "# file_name = f\"{model_name}.hef\"\n",
+        "# file_name = f\"drive/MyDrive/{model_name}.hef\"\n",
         "# with open(file_name, \"wb\") as f:\n",
         "#     f.write(hef)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### compile_model_main.py"
+      ],
+      "metadata": {
+        "id": "_Ghdf1rVgp16"
+      }
     },
     {
       "cell_type": "code",
@@ -904,8 +916,7 @@
         "#         self.config = Config()\n",
         "#         self.compile_output = []\n",
         "\n",
-        "# 하단 골뱅이 하나 지워야함\n",
-        "#     @@staticmethod\n",
+        "#     @staticmethod\n",
         "#     def format_bytes(bytes_value):\n",
         "#         for unit in ['B', 'KB', 'MB', 'GB']:\n",
         "#             if bytes_value < 1024:\n",
@@ -1048,18 +1059,24 @@
         "pEcKFEDQ6xwZ",
         "lCyuEkRW60sL",
         "TREvZyE5BtLS",
-        "J3721rku3RkD",
         "NB3s7lNmLGOO",
         "sFUxTcPwSdIu",
         "NbJeCWMkLVHr",
+        "J3721rku3RkD",
+        "HUub5BzQShj1",
         "YBGZHApMTn9q",
         "Ht5lOhVkTl8S",
         "IRHZdif_YBtU",
         "IAVMQsKCYGRh",
-        "HodBej23zrkQ"
+        "A2roUWBWuZ4z",
+        "jh4dv5tFudOB",
+        "0H628_qlgwpN",
+        "VWxFxUOVzg6k",
+        "HodBej23zrkQ",
+        "_Ghdf1rVgp16"
       ],
       "provenance": [],
-      "gpuType": "T4"
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -1067,8 +1084,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
