Feat : Convert .onnx to .engine & Running confirmed on jetson nano

--- a/ObjectDetection/YOLOv8n.ipynb
+++ b/ObjectDetection/YOLOv8n.ipynb
@@ -1,64 +1,77 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4",
+      "collapsed_sections": [
+        "aIv6AlOGzdEt",
+        "N1nhFcufLmbP",
+        "i_BzJ98KVKKZ",
+        "Cb6uaqNm7xUD",
+        "6qAG_-80qJJf"
+      ]
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
+  },
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vxwCPV23qQhx"
-      },
       "source": [
         "# 설치 & 확인"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+      ],
       "metadata": {
-        "id": "UNvhLxS2gqmr"
-      },
-      "source": [
-        "## pip install"
-      ]
+        "id": "vxwCPV23qQhx"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
+        "id": "TgpJNG28Zp9F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TgpJNG28Zp9F",
-        "outputId": "3b3dee02-875d-4483-d509-8a0a771ef7f4"
+        "outputId": "6b68e3f7-5ff5-4d6e-e08e-25d8e7f08b78"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m631.1/631.1 kB\u001b[0m \u001b[31m40.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m53.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m31.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m39.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m87.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m83.1/83.1 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.8/66.8 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.9/49.9 MB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
         "!pip install ultralytics==8.0.196 --quiet\n",
         "!pip install roboflow --quiet"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IKBFRxkvguQC"
-      },
-      "source": [
-        "# 런타임 환경 확인"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wnB8M0R7KMnc"
-      },
-      "source": [
-        "## Import"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "c5IBoCgybqFo"
-      },
-      "outputs": [],
       "source": [
         "from IPython import display\n",
         "from IPython.display import Image\n",
@@ -66,106 +79,73 @@
         "import ultralytics\n",
         "from ultralytics import YOLO\n",
         "import os"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+      ],
       "metadata": {
-        "id": "l466TFvUKRSR"
+        "id": "LHglUK6Uagm8"
       },
-      "source": [
-        "## Version"
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "rf = Roboflow(api_key=\"\")\n",
+        "project = rf.workspace(\"yolov8n-shyng\").project(\"one-q\")\n",
+        "version = project.version(2)\n",
+        "dataset = version.download(\"yolov8\")"
+      ],
       "metadata": {
+        "id": "gZpQ_CGJanZE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "CgzByLdjKeHN",
-        "outputId": "36b5292b-dc7c-4b8f-8a94-634dd8dc6f51"
+        "outputId": "1b2444f5-a7c4-4919-80d7-0dede09bca37"
       },
-      "outputs": [],
-      "source": [
-        "display.clear_output()\n",
-        "ultralytics.checks()\n",
-        "\n",
-        "HOME = os.getcwd()\n",
-        "print(HOME)"
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loading Roboflow workspace...\n",
+            "loading Roboflow project...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading Dataset Version Zip in ONE-Q-2 to yolov8:: 100%|██████████| 37123/37123 [00:03<00:00, 10024.39it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "Extracting Dataset Version Zip to ONE-Q-2 in yolov8:: 100%|██████████| 3194/3194 [00:01<00:00, 2507.41it/s]\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "CwaB7WxXj_ip"
-      },
       "source": [
-        "# 간이 테스트"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "2_4o-BjJiwbG"
-      },
-      "outputs": [],
-      "source": [
-        "#!yolo task=detect mode=predict model=yolov8n.pt conf=0.25 source='https://media.roboflow.com/notebooks/examples/dog.jpeg' save=True\n",
-        "#Image(filename='runs/detect/predict/dog.jpeg', height=600)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "collapsed": true,
-        "id": "ae44fFyjcbGS"
-      },
-      "outputs": [],
-      "source": [
-        "#!mkdir {HOME}/datasets\n",
-        "#%cd {HOME}/datasets"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "# Model Train(CLI)"
+      ],
       "metadata": {
         "id": "aIv6AlOGzdEt"
-      },
-      "source": [
-        "# Model Run"
-      ]
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8hSvHP_k5BFi",
-        "outputId": "d53927dc-e35d-4e3d-ceb1-09216225bd33"
-      },
-      "outputs": [],
-      "source": [
-        "# api_key는 계정마다 다름\n",
-        "rf = Roboflow(api_key=\"wNo4QrXGVHMuGz8nVoBq\")\n",
-        "project = rf.workspace(\"yolov8n-shyng\").project(\"one-q\")\n",
-        "version = project.version(1)\n",
-        "dataset = version.download(\"yolov8\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "Vr_X51Zk6U83"
-      },
-      "outputs": [],
       "source": [
         "\"\"\"\n",
         "### ----- CLI 방식 ----- ###\n",
@@ -176,144 +156,133 @@
         "# Predict\n",
         "!yolo task=detect mode=predict model=/content/runs/detect/train/weights/best.pt conf=0.7 source={dataset.location}/test/images save=True\n",
         "\"\"\""
-      ]
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "Vr_X51Zk6U83"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Train(Code)"
+      ],
+      "metadata": {
+        "id": "N1nhFcufLmbP"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tLqiU9wkpalT",
-        "outputId": "d78cb3da-7c11-4739-e77e-84bcced93cdc"
-      },
-      "outputs": [],
       "source": [
         "### ----- Code 방식 ----- ###\n",
         "# Train\n",
         "model = YOLO(\"yolov8n.pt\")\n",
         "model.info()\n",
-        "model.train(data=f\"{dataset.location}/data.yaml\", epochs=30, imgsz=640)  # \"./datasets/ONE-Q-1/data.yaml\""
-      ]
+        "model.train(data=f\"{dataset.location}/data.yaml\", epochs=50, imgsz=640)  # \"./datasets/ONE-Q-1/data.yaml\""
+      ],
+      "metadata": {
+        "id": "tLqiU9wkpalT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Test"
+      ],
+      "metadata": {
+        "id": "i_BzJ98KVKKZ"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ih0Yjmqx1Q45",
-        "outputId": "3736b805-aa1d-417e-d112-f7c6149e92c0"
-      },
-      "outputs": [],
       "source": [
+        "!sudo rm -rf runs"
+      ],
+      "metadata": {
+        "id": "6-WCHOmIb5vG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ultralytics import YOLO\n",
+        "import os\n",
+        "\n",
         "# Test(predict)\n",
-        "model = YOLO(\"./runs/detect/train/weights/best.pt\")\n",
+        "model = YOLO(\"best.pt\")\n",
+        "\n",
         "testImgDir = (f\"{dataset.location}/test/images\") # \"./ONE-Q-1/test/images\"\n",
-        "\n",
-        "print(testImgDir)\n",
-        "for img in os.listdir(testImgDir):\n",
+        "for img in os.listdir(testImgDir)[:10]:\n",
         "  imgName = f\"{testImgDir}/{img}\"\n",
-        "  #print(imgName)\n",
+        "  print(imgName)\n",
         "  results = model.predict(source=imgName, save=True)\n",
-        "  print(results[0].boxes.xyxy, results[0].boxes.xyxyn)"
-      ]
+        "  print(results[0].boxes)"
+      ],
+      "metadata": {
+        "id": "zrmzrm2_9iaE"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "N1nhFcufLmbP"
-      },
       "source": [
-        "# 코드 방식 train(현재 실행 x)"
-      ]
+        "# .pt 모델 다른 형식으로 import"
+      ],
+      "metadata": {
+        "id": "Cb6uaqNm7xUD"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 90
-        },
-        "id": "0siJlrCC0Q3Z",
-        "outputId": "4f410d65-5176-4390-fc41-fe7222c88ae0"
-      },
-      "outputs": [],
       "source": [
-        "\"\"\"\n",
-        "result = model('runs/detect/predict/dog.jpeg')\n",
-        "\n",
-        "# Process results list\n",
-        "for result in results:\n",
-        "    boxes = result.boxes  # Boxes object for bounding box outputs\n",
-        "    masks = result.masks  # Masks object for segmentation masks outputs\n",
-        "    keypoints = result.keypoints  # Keypoints object for pose outputs\n",
-        "    probs = result.probs  # Probs object for classification outputs\n",
-        "    obb = result.obb  # Oriented boxes object for OBB outputs\n",
-        "    result.show()  # display to screen\n",
-        "    result.save(filename=\"result.jpg\")  # save to disk\n",
-        "\"\"\""
-      ]
+        "!pip3 install ultralytics --quiet\n",
+        "#!pip3 install tensorrt --quiet\n",
+        "#!pip3 install roboflow --quiet"
+      ],
+      "metadata": {
+        "id": "HGkVZwra8Q6u"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "id": "mk9-aMrGgN0L",
-        "outputId": "c0b17b19-ba6a-4a21-b3a0-5ba029414ad6"
-      },
-      "outputs": [],
       "source": [
-        "\"\"\"\n",
-        "import glob\n",
+        "model = YOLO(\"best.pt\")  # load a custom trained model\n",
         "\n",
-        "# path & slicing 수정 필요\n",
-        "for image_path in glob.glob('/content/runs/detect/predict4/*.jpg')[:5]:\n",
-        "  display(Image(filename=image_path, width=640))\n",
-        "  print(\"\\n\")\n",
-        "\"\"\""
-      ]
+        "# Export the model\n",
+        "model.export(format=\"onnx\", batch=1, imgsz=640, optimize=True, data=f\"{dataset.location}/data.yaml\")"
+      ],
+      "metadata": {
+        "id": "EdA8oLz672d5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "6qAG_-80qJJf"
-      },
       "source": [
         "# 참고 자료"
-      ]
+      ],
+      "metadata": {
+        "id": "6qAG_-80qJJf"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "PeDJ5FJOi4KG"
-      },
       "source": [
         "https://autoever-oneq.atlassian.net/wiki/spaces/ADP/pages/12124230/YOLO"
-      ]
+      ],
+      "metadata": {
+        "id": "PeDJ5FJOi4KG"
+      }
     }
-  ],
-  "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-      "gpuType": "T4",
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
